--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
-    "es6-promise": "^4.1.0"
+    "es6-promise": "^4.1.0",
+    "wind-dom": "0.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
