--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
     "es6-promise": "^4.1.0",
-    "wind-dom": "0.0.3"
+    "wind-dom": "0.0.3",
+    "vue-lazyload": "^1.0.0-rc7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -41,22 +42,24 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "node-notifier": "^5.1.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.2",
+    "node-notifier": "^5.1.2",
+    "node-sass": "^4.8.3",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.2.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.7",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
