--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.1.0",
     "express": "^4.16.3",
+    "mavon-editor": "^2.5.3",
+    "mint-ui": "^2.2.13",
     "url-search-params": "^0.10.0",
     "vue": "^2.5.2",
     "vue-infinite-scroll": "^2.0.2",
