--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.3",
     "mavon-editor": "^2.5.3",
     "mint-ui": "^2.2.13",
+    "qrcode": "^1.2.0",
     "social-share": "^0.1.0",
     "url-search-params": "^0.10.0",
     "vue": "^2.5.2",
