--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "es6-promise": "^4.1.0",
     "express": "^4.16.3",
     "mavon-editor": "^2.5.3",
-    "mint-ui": "^2.2.13",
     "qrcode": "^1.2.0",
     "social-share": "^0.1.0",
     "url-search-params": "^0.10.0",
@@ -39,6 +38,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
+    "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.0",
